--- a/diapos/RadiacionSolar.org
+++ b/diapos/RadiacionSolar.org
@@ -1285,7 +1285,7 @@ elementos en el conjunto.
 
 #+BEGIN_LaTeX
   \[
-  \mathbf{D} = \mathbf{O} - \mathbf{M} =  \left\{ (o_1 - m_1) \dots (o_n - m_n)  \right\} = \left\{ d_1 \dots d_n  \right\}
+  \mathbf{D} = \mathbf{M} - \mathbf{O} =  \left\{ (m_1 - o_1) \dots (m_n - o_n)  \right\} = \left\{ d_1 \dots d_n  \right\}
   \]
 #+END_LaTeX
 
@@ -1294,14 +1294,14 @@ elementos en el conjunto.
 - Mean Bias Difference (MBD), diferencia media (indica si el modelo sobreestima o subestima):
 #+BEGIN_LaTeX
   \[
-  MBE = \overline{\mathbf{D}} = \overline{\mathbf{O}} - \overline{\mathbf{M}} = \frac{1}{n} \sum_{i=1}^n (o_i - m_i)
+  MBE = \overline{\mathbf{D}} = \overline{\mathbf{M}} - \overline{\mathbf{O}} = \frac{1}{n} \sum_{i=1}^n (m_i - o_i)
   \]
 #+END_LaTeX
 \pause
 - Root Mean Square Error (RMSD), diferencia cuadrático media:
 #+BEGIN_LaTeX
   \[
-  RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} \sum_{i=1}^n (o_i - m_i)^2  \right)^{1/2}
+  RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} \sum_{i=1}^n (m_i - o_i)^2  \right)^{1/2}
   \]
 #+END_LaTeX
 
@@ -1329,7 +1329,7 @@ RMSD^2= \sigma^2_{\mathbf{D}} + \overline{\mathbf{D}}^2
 
 #+BEGIN_LaTeX
   \[
-  MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \left|o_i - m_i\right|
+  MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \left|m_i - o_i\right|
   \]
 #+END_LaTeX
 - El RMSD no es robusto (un error puntual puede distorsionar el estimador) y depende del número de muestras:
