--- a/diapos/ModuloyGenerador.tex
+++ b/diapos/ModuloyGenerador.tex
@@ -1,4 +1,4 @@
-% Created 2015-01-18 dom 19:30
+% Created 2015-02-07 sáb 15:52
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -315,26 +315,37 @@ a sol real son del mismo rango que la separación entre categorías.}
 \end{frame}
 
 \begin{frame}[label=sec-3-0-2]{}
-\includegraphics[width=.9\linewidth]{../figs/clasificacion2.jpg}
+\includegraphics[width=.9\linewidth]{../figs/er.jpg}
 \end{frame}
 
 \begin{frame}[label=sec-3-0-3]{}
-\includegraphics[width=.9\linewidth]{../figs/dscf0997.jpg}
+\includegraphics[height=0.9\textheight]{../figs/TelefoniaRural.jpg}
 \end{frame}
 
 \begin{frame}[label=sec-3-0-4]{}
-\includegraphics[width=.9\linewidth]{../figs/ModulosRotos.jpg}
+\includegraphics[width=.9\linewidth]{../figs/clasificacion2.jpg}
 \end{frame}
 
 \begin{frame}[label=sec-3-0-5]{}
-\includegraphics[width=.9\linewidth]{../figs/p1010007.jpg}
+\includegraphics[width=.9\linewidth]{../figs/dscf0997.jpg}
 \end{frame}
 
 \begin{frame}[label=sec-3-0-6]{}
-\includegraphics[width=.9\linewidth]{../figs/TorreguilInterior2.jpg}
+\includegraphics[width=.9\linewidth]{../figs/ModulosRotos.jpg}
 \end{frame}
 
 \begin{frame}[label=sec-3-0-7]{}
+\includegraphics[width=.9\linewidth]{../figs/p1010007.jpg}
+\end{frame}
+
+\begin{frame}[label=sec-3-0-8]{}
+\includegraphics[width=.9\linewidth]{../figs/BarreraRuido.jpg}
+\end{frame}
+\begin{frame}[label=sec-3-0-9]{}
+\includegraphics[width=.9\linewidth]{../figs/TorreguilInterior2.jpg}
+\end{frame}
+
+\begin{frame}[label=sec-3-0-10]{}
 \includegraphics[width=.9\linewidth]{../figs/VistadesdeInterior.jpg}
 \end{frame}
 % Emacs 24.4.1 (Org mode 8.2.7c)
