--- a/diapos/SFCR_ConceptosGenerales.tex
+++ b/diapos/SFCR_ConceptosGenerales.tex
@@ -1,4 +1,4 @@
-% Created 2015-01-20 mar 00:02
+% Created 2015-02-07 sáb 16:14
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -238,7 +238,32 @@ necesarios),
 \end{exampleblock}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-10]{SFCR en edificación: CTE-HE5}
+\begin{frame}[label=sec-1-3-10]{Cubierta Inclinada}
+\includegraphics[width=.9\linewidth]{../figs/CubiertaInclinada.png}
+\end{frame}
+
+\begin{frame}[label=sec-1-3-11]{Cubierta Plana}
+\includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/CubiertaPlana.png}
+\end{frame}
+
+\begin{frame}[label=sec-1-3-12]{Parasol}
+\includegraphics[height=0.9\textheight]{/home/oscar/github/esf/figs/Parasol.png}
+\end{frame}
+
+\begin{frame}[label=sec-1-3-13]{Fachada Acristalada}
+\includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/FachadaAcristalada.png}
+\end{frame}
+
+\begin{frame}[label=sec-1-3-14]{Muro Cortina}
+\includegraphics[height=0.9\textheight]{/home/oscar/github/esf/figs/MuroCortina.png}
+\end{frame}
+
+\begin{frame}[label=sec-1-3-15]{Aparcamiento}
+\includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/Aparcamiento.png}
+\end{frame}
+
+
+\begin{frame}[label=sec-1-3-16]{SFCR en edificación: CTE-HE5}
 \begin{itemize}
 \item El CTE-HTE5 divide España en cinco zonas climáticas de acuerdo al valor medio anual de la radiación global diaria en el plano horizontal.
 
@@ -248,7 +273,7 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-11]{SFCR en edificación: CTE-HE5}
+\begin{frame}[label=sec-1-3-17]{SFCR en edificación: CTE-HE5}
 \begin{itemize}
 \item Potencia \alert{nominal} a instalar
 \end{itemize}
